--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Modulo 1: Consiglio del Giorno -->
     <section id="consiglio-giorno">
       <h2>Consiglio del Giorno</h2>
-      <button onclick="generaConsiglio()">Genera Consiglio</button>
+      <button onclick="caricaConsiglio()">Genera Consiglio</button>
       <p id="consiglio-testo">Premi il pulsante per ricevere un consiglio AI!</p>
     </section>
 
