--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
 
       <div id="analisi-output" class="output-box"></div>
     </section>
+    <!-- Sezione To do Time -->
+<section id="todo-time">
+  <h2>To do Time</h2>
+  <form id="todo-form">
+    <label for="todo-nome">Nome cliente/attività:</label>
+    <input type="text" id="todo-nome" required />
+
+    <label for="todo-orario">Orario:</label>
+    <input type="time" id="todo-orario" required />
+
+    <label for="todo-prodotti">Prodotti richiesti (facoltativo):</label>
+    <input type="text" id="todo-prodotti" />
+
+    <button type="submit">Aggiungi alla lista</button>
+  </form>
+
+  <ul id="todo-list" class="todo-list"></ul>
+</section>
+
   </main>
 
   <footer>
