--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
 <section id="todo-time">
   <h2>To do Time</h2>
   <form id="todo-form">
-    <label for="todo-nome">Nome cliente/attività:</label>
+    <label for="todo-nome">Nome Attività:</label>
     <input type="text" id="todo-nome" required />
 
-    <label for="todo-orario">Orario:</label>
+    <label for="todo-orario">Orario (24h):</label>
     <input type="time" id="todo-orario" required />
 
-    <label for="todo-prodotti">Prodotti richiesti (facoltativo):</label>
+    <label for="todo-prodotti">Prodotti richiesti (opzionale):</label>
     <input type="text" id="todo-prodotti" />
 
-    <button type="submit">Aggiungi alla lista</button>
+    <button type="submit">Aggiungi</button>
   </form>
-
-  <ul id="todo-list" class="todo-list"></ul>
+  <ul id="todo-list"></ul>
 </section>
+
 
   </main>
 
