--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
   </header>
 
   <nav>
-    <button data-target="consiglio-giorno">Consiglio del Giorno</button>
-    <button data-target="diario">Diario di Bordo</button>
-    <button data-target="todo-time">To do Time</button>
+    <button type="button" data-target="consiglio-giorno">Consiglio del Giorno</button>
+    <button type="button" data-target="diario">Diario di Bordo</button>
+    <button type="button" data-target="todo-time">To do Time</button>
   </nav>
 
   <main class="container">
     <!-- Modulo 1: Consiglio del Giorno -->
-    <section id="consiglio-giorno" class="active">
+    <section id="consiglio-giorno">
       <h2>Consiglio del Giorno</h2>
-      <button onclick="generaConsiglio()">Genera Consiglio</button>
+      <button id="genera-consiglio">Genera Consiglio</button>
       <p id="consiglio-testo">Premi il pulsante per ricevere un consiglio AI!</p>
     </section>
 
@@ -114,7 +114,6 @@
         <input type="text" id="todo-prodotti" />
 
         <button type="submit">Aggiungi</button>
-        
       </form>
       <ul id="todo-list"></ul>
       <button type="button" id="reset-todo">Reset</button>
