--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   </header>
 
   <nav>
-    <button type="button" data-target="consiglio-giorno">Consiglio del Giorno</button>
-    <button type="button" data-target="diario">Diario di Bordo</button>
-    <button type="button" data-target="todo-time">To do Time</button>
+    <button data-target="consiglio-giorno">Consiglio del Giorno</button>
+    <button data-target="diario">Diario di Bordo</button>
+    <button data-target="todo-time">To do Time</button>
   </nav>
 
   <main class="container">
