--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Modulo 1: Consiglio del Giorno -->
     <section id="consiglio-giorno">
       <h2>Consiglio del Giorno</h2>
-      <button id="genera-consiglio">Genera Consiglio</button>
+      <button id="btn-consiglio" onclick="generaConsiglio()">Genera Consiglio</button>
       <p id="consiglio-testo">Premi il pulsante per ricevere un consiglio AI!</p>
     </section>
 
