--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <button data-target="consiglio-giorno">Consiglio del Giorno</button>
     <button data-target="diario">Diario di Bordo</button>
     <button data-target="todo-time">To do Time</button>
+    <button data-target="combo-btn">Combo</button>
   </nav>
 
   <main class="container">
@@ -117,6 +118,12 @@
       </form>
       <ul id="todo-list"></ul>
       <button type="button" id="reset-todo">Reset</button>
+    </section>
+    <!-- Sezione Combo -->
+    <section id="Combo">
+      <h2>Menù/Combo</h2>
+      <button id="combo-btn" onclick="SuggerisciCombo()">Suggerisci combo</button>
+      <p id="consiglio-testo">Premi il pulsante per ricevere un consiglio AI!</p>
     </section>
   </main>
 
