--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
       <button type="button" id="reset-todo">Reset</button>
     </section>
     <!-- Sezione Combo -->
-    <section id="Combo">
-      <h2>Menù/Combo</h2>
+    <section id="combo-bnt">
+      <h2>Combo</h2>
       <button id="combo-btn" onclick="SuggerisciCombo()">Suggerisci combo</button>
-      <p id="consiglio-testo">Premi il pulsante per ricevere un consiglio AI!</p>
+      <p id="suggerimento-testo">Premi il pulsante per ricevere un consiglio AI!</p>
     </section>
   </main>
 
