--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <!-- Sezione Combo -->
     <section id="combo-bnt">
       <h2>Combo</h2>
-      <button id="combo-btn" onclick="SuggerisciCombo()">Suggerisci combo</button>
+      <button id="btn-combo" onclick="SuggerisciCombo()">Suggerisci combo</button>
       <p id="suggerimento-testo">Premi il pulsante per ricevere un consiglio AI!</p>
     </section>
   </main>
