--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 </div>
 
 <!-- Output -->
+<button id="btn-combo">Suggerisci prodotti</button>
 <p id="combo-output">Premi il pulsante per ricevere un consiglio AI!</p>
-    <p id="combo-output">Premi il pulsante per ricevere un consiglio AI!</p>
 
     </section>
   </main>
