--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Coach di Vendita Bofrost</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     main section { display: none; }
     main section.active { display: block; }
